--- a/index.html
+++ b/index.html
@@ -50,5 +50,5 @@
          blandit vulputate magna.
     </p>
 <script src-"//code.tidio.co/jwkb46yruacttgrr1yovuuaifk6yu0n3.js" async></script>
-   
+</body>
 </html>
