--- a/index.html
+++ b/index.html
@@ -49,6 +49,5 @@
          Sed pharetra turpis nibh semper tempus, donec nam congue nullam scelerisque diam, sagittis 
          blandit vulputate magna.
     </p>
-<script src-"//code.tidio.co/jwkb46yruacttgrr1yovuuaifk6yu0n3.js" async></script>
-</body>
+<script src-"//code.tidio.co/jwkb46yruacttgrr1yovuuaifk6yu0n3.js" async></script> </body>
 </html>
