--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
          pretium convallis cras cursus iaculis laoreet posuere conubia netus arcu, tristique commodo 
          ornare euismod curabitur erat non hendrerit libero mus risus dictum cum. Magna massa senectus 
          metus urna mattis mus malesuada dignissim felis, nostra tortor rhoncus iaculis interdum 
-         ridiculus tincidunt ornare, sodales lectus rutrum cursus elementum venenatis quam nulla. 
+         ridiculus tincidunt ornare, sodales lectus rutrum cursus elementum venenatis quam nulla
          Sed pharetra turpis nibh semper tempus, donec nam congue nullam scelerisque diam, sagittis 
-         blandit vulputate magna.
+         blandit vulputate 
     </p>
     <br>
     <p>
