en proceso cambio
actualizacion

--- a/index.html
+++ b/index.html
@@ -1,43 +1,16 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="en">
 <head>
-    <title>Clase 2</title>
+    <link rel="stylesheet" href="styles/style1.css">
     <meta charset="UTF-8">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dylansel</title>
 </head>
-
 <body>
-    <h1>Menu de Inicio</h1>
-    <br>
-    
-    <a href="https://www.google.com/" target="_balnk"> <!--href (inserta un link) target _balnk (abre link en una nueva pestaña)-->
-        <img src="img/icono google.png" width="50" height="50" alt="(Icono de google)"> <!--img src (Inserta la imagen donde se guarda el link) width (anchura de img.) height(Altura de img.) alt (lo que aparezca si no carga la img)-->
-    </a>
+    <h1>Proximmente pagina en Html y css</h1>
+    <h3>Esta pagina todabia esta en desarollo, vuelva pronto</h3>
 
-    <br>
-
-    <a href="https://www.youtube.com/" target="_balnk">
-        <img src="img/icono youtube.png"  width="50" height="50" alt="(Icono de Youtube)"> 
-    </a>
-
-    <br>
-
-    <a href="https://sites.google.com/view/dylanssel/inicio" target="_blank">
-        <img src="img/IMG_2136.PNG"  width="50" height="50" alt="(Icono de Dylansel)"> 
-    </a>
-
-    <br>
-
-    <a href="https://github.com/" target="_blank"> 
-        <img src="img/icono github.png"  width="50" height="50" alt="(Icono de Github)">
-    </a>
-
-    <br>
-
-
+    <img class="imgreparacion" src="Img/tuercas en proceso.png" alt="(imagen de tuerca en reparacion)">
 
 </body>
-
-
 </html>
