--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Proximmente pagina en Html y css</h1>
-    <h3>Esta pagina todabia esta en desarollo, vuelva pronto</h3>
+<h3>Esta pagina todabia esta en desarollo, vuelva pronto!!</h3>
 
     <img class="imgreparacion" src="Img/tuercasreparacion.png" alt="(imagen de tuerca en reparacion)">
 
