--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <br>
     <div class="main">
     <h1>Proximmente pagina en Html y css</h1>
-    <h3>Esta pagina todabia esta en desarollo, vuelva pronto!!</h3>
+    <h3>Esta pagina todabia esta en desarollo vuelva pronto!!</h3>
     <img class="imgreparacion" src="https://image.flaticon.com/icons/png/512/2365/2365514.png" alt="(imagen de tuerca en reparacion)">
   
     </div>
