--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.youtube.com/channel/UCeWayDffs4tW3Vrb6F54riw?view_as=subscriber" target="_bland"><i class="fab fa-fw fa-youtube"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/dylanssel/" target="_bland"><i class="fab fa-fw fa-instagram"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="mailto:dylanseltzer4@gmail.com" target="_bland"><i class="fa fa-envelope"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/dylan-seltzer-a08948171/?originalSubdomain=ar" target="_bland"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="www.linkedin.com/in/Dylan-Seltzer" target="_bland"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         
                         
                     </div>
