--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                 </div>
             </div>
         </section>
-        <div class="page-section contac_color" id="contact">
+        <div class="page-section contac_size contac_color " id="contact">
             <div class="conteiner contac_size">
-                <iframe class="col-12 " src="https://docs.google.com/forms/d/e/1FAIpQLSdL7fGzOhzJnQspDqxYRgzy0Dm7r6muQC-jVNccD6Q-P9S6sA/viewform" frameborder="0"></iframe>
+                <iframe class="col-12 contac_size" src="https://docs.google.com/forms/d/e/1FAIpQLSdL7fGzOhzJnQspDqxYRgzy0Dm7r6muQC-jVNccD6Q-P9S6sA/viewform" frameborder="0"></iframe>
             </div>
             
 
