--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                 </div>
             </div>
         </section>
-        <div class="page-section contac_size contac_color " id="contact">
-            <div class="conteiner contac_size">
+        <div class="page-section contac_color contac_size contact_margin "  id="contact">
+            <div class="conteiner contac_color contac_size" >
                 <iframe class="col-12 contac_size" src="https://docs.google.com/forms/d/e/1FAIpQLSdL7fGzOhzJnQspDqxYRgzy0Dm7r6muQC-jVNccD6Q-P9S6sA/viewform" frameborder="0"></iframe>
             </div>
             
