--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="row ">
                      
                     <!-- Footer Social Icons-->
-                    <div class="col-lg-6 mb-6 mb-lg-0">
+                    <div class="col-lg-6 mb-6 mb-lg-0 ">
                         <h4 class="text-uppercase mb-4">Redes sociales</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.youtube.com/channel/UCeWayDffs4tW3Vrb6F54riw?view_as=subscriber" target="_bland"><i class="fab fa-fw fa-youtube"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/dylanssel/" target="_bland"><i class="fab fa-fw fa-instagram"></i></a>
@@ -167,7 +167,7 @@
                         
                     </div>
                     <!-- Footer About Text-->
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 foter_size_dy">
                         <h4 class="text-uppercase mb-4">Mas Informacion</h4>
                         <p class="lead mb-0 text_email">
                             Para mas informacion sobre mi pueden mandarme un Email a 
