--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 </div>
                 <div class="col-lg-4 mr-auto">
                     <p class="lead">Esta pagina esta armada con ayuda de una API de Bootstrap y modificada gracias a los
-                        conocimientos en Html y Css. Si quieren ver el certificado de Desarollo Web <a href="assets/records/Diploma Desarollo Web 1 - Dylan Seltzer.pdf" target="_baland"> click aca.</a> </p>
+                        conocimientos en Html y Css. Si queres ver el certificado de Desarollo Web <a class="color_text_aboutsection" href="assets/records/Diploma Desarollo Web 1 - Dylan Seltzer.pdf" target="_baland"> click aca.</a> </p>
                 </div>
             </div>
             <!-- About Section Button-->
