--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Esta es una pagina con mis conocimientos" />
+    <meta name="description" content="Esta es una pagina informativa con mis conocimientos" />
     <meta name="author" content="Dylan Seltzer" />
     <title>Dylan Seltzer</title>
+    <!--para cuando se comparte el link de la pagin, la imagen y descripcion que aparece-->
+    <meta property="og:image" content="assets/img/avatar.png">
+    <meta property="og:description" content="Esta es una pagina informativa con mis conocimientos">
+    <meta property="og:title" content="Dylan Seltzer">
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/Logo.png" />
     <!-- Font Awesome icons (free version)-->
@@ -78,7 +82,7 @@
 
             <div class="row">
                 <div class="col-lg-4 col-12 ml-auto col-sm-6 text-center">
-                    <h5 class="text-negrita">Aprenedidas</h5>
+                    <h5 class="text-negrita">Aprendidas</h5>
 
                     <ul class="text-justify text-size-20 ">
                         <li>HTML 5 Avanzado</li>
