--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Esta es una pagina informativa con mis conocimientos" />
+    <meta name="description" content="Soy Dylan Seltzer y diseñe esta pagina para mas informacion sobre mi. hace click y mira mis estudios" />
     <meta name="author" content="Dylan Seltzer" />
     <title>Dylan Seltzer</title>
     <!--para cuando se comparte el link de la pagin, la imagen y descripcion que aparece-->
