--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Dylan Seltzer" />
     <title>Dylan Seltzer</title>
     <!--para cuando se comparte el link de la pagin, la imagen y descripcion que aparece-->
-    <meta property="og:image" itemprop="image" content="assets/img/favicon.png">
+    <meta property="og:image" itemprop="image" content="assets/img/Logo-256-256.png">
     <meta property="og:description" content="Esta es una pagina informativa con mis conocimientos">
     <meta property="og:title" content="Dylan Seltzer">
     <!-- Favicon-->
