--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
 
 
     <!-- Portfolio Section-->
-    <section class="page-section " id="portfolio">
+    <section class="page-section dark-mode" id="portfolio">
         <div class="container">
             <!-- Portfolio Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Estudios</h2>
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0 dark-mode">Estudios</h2>
             <!-- Icon Divider-->
-            <div class="divider-custom">
-                <div class="divider-custom-line"></div>
+            <div class="divider-custom ">
+                <div class="divider-custom-line dark-mode-white"></div>
                 <div class="divider-custom-icon logo_divider"><img src="assets/img/Logo.png" alt="logo de Dylan Seltzer"></div>
-                <div class="divider-custom-line"></div>
+                <div class="divider-custom-line dark-mode-white"></div>
             </div>
 
             <div class="row">
@@ -154,15 +154,15 @@
 
 
     <!-- Contact Section-->
-    <section class="page-section" id="contact">
+    <section class="page-section dark-mode " id="contact">
         <div class="container">
             <!-- Contact Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Fotos</h2>
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0 dark-mode ">Fotos</h2>
             <!-- Icon Divider-->
             <div class="divider-custom">
-                <div class="divider-custom-line"></div>
+                <div class="divider-custom-line dark-mode-white"></div>
                 <div class="divider-custom-icon logo_divider"><img src="assets/img/Logo.png" alt="logo de Dylan Seltzer"></div>
-                <div class="divider-custom-line"></div>
+                <div class="divider-custom-line dark-mode-white"></div>
             </div>
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner carusel_setings_dylan">
@@ -236,9 +236,9 @@
 
     <!--parte de certificados -->
 
-    <div class="portfolio-modal modal fade" id="certificados" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
+    <div class="portfolio-modal modal fade " id="certificados" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
-            <div class="modal-content caja-certificados">
+            <div class="modal-content caja-certificados dark-mode">
                 <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"><i class="fas fa-times"></i></span>
                 </button>
@@ -247,19 +247,19 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title-->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">certificados</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0 dark-mode" id="portfolioModal1Label">certificados</h2>
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
-                                    <div class="divider-custom-line"></div>
+                                    <div class="divider-custom-line dark-mode-white"></div>
                                     <div class="divider-custom-icon logo_divider"><img src="assets/img/Logo.png" alt="logo de Dylan Seltzer"></div>
-                                    <div class="divider-custom-line"></div>
+                                    <div class="divider-custom-line dark-mode-white"></div>
                                 </div>
                                 <!-- Portfolio Modal - Image-->
                                 <a href="assets/certificados/Desarollo Web 1.pdf" target="_bland">
-                                    <img class="img-certificado  " src="assets/certificados/Desarollo Web 1.png" alt="Diploma Desarrollo Web 1">
+                                    <img class="img-certificado  dark-mode-certificados" src="assets/certificados/Desarollo Web 1.png" alt="Diploma Desarrollo Web 1">
                                 </a>
                                 <a href="assets/certificados/Desarollo Web 2  intensiva.pdf" target="_bland">
-                                    <img class="img-certificado  " src="assets/certificados/Desarollo Web 2 intensiva.png" alt="Diploma Desarrollo Web 2">
+                                    <img class="img-certificado dark-mode-certificados " src="assets/certificados/Desarollo Web 2 intensiva.png" alt="Diploma Desarrollo Web 2">
                                 </a>
 
                                 <!-- Portfolio Modal - Text-->
