--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link href="css/styles.css" rel="stylesheet" />
     <!-- styles Dylan-->
     <link rel="stylesheet" href="css/styles_dylan.css">
+    <meta name="yandex-verification" content="159f2880e439a92c" />
 </head>
 
 <body id="page-top">
