--- a/index.html
+++ b/index.html
@@ -25,10 +25,22 @@
     <meta name="yandex-verification" content="159f2880e439a92c" />
 </head>
 
-<body id="page-top">
-
+<body class="preloaderScroll" id="page-top">
+    <!-- Preloader-->
+    <div id="padrepreloader">
+        <div class="lds-roller preloader">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top " id="mainNav">
+    <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top navardyl" id="mainNav">
         <div class="container logo_nav">
 
             <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/Logo.png" alt="logo de Dylan Seltzer"><span id="span_navar_name">Dylan Seltzer</span> </a>
@@ -285,6 +297,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Third party plugin JS-->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <!-- Contact form JS-->
     <script src="assets/mail/jqBootstrapValidation.js"></script>
