--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <h4 class="text-uppercase mb-4">Mas Informacion</h4>
                     <p class="lead mb-0 text_email">
                         Para mas informacion sobre mi pueden mandarme un Email a
-                        <a href="mailto:dylanseltzer4@gmail.com" target="_bland">Dylanseltzer4@gmail.com</a>
+                        <a href="mailto:info@dylansel.tk" target="_bland">Info@dylansel.tk</a>
 
                     </p>
                 </div>
