--- a/index.html
+++ b/index.html
@@ -221,9 +221,8 @@
                 <div class="col-lg-6 foter_size_dy">
                     <h4 class="text-uppercase mb-4">Mas Informacion</h4>
                     <p class="lead mb-0 text_email">
-                        Para mas informacion sobre mi pueden mandarme un Email a
+                        Para mas informacion sobre mi pueden mandarme un email a
                         <a href="mailto:info@dylansel.tk" target="_bland">Info@dylansel.tk</a>
-
                     </p>
                 </div>
             </div>
