--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <div></div>
         </div>
     </div>
+    <div class="actualizacion">
+        <p>Pagina en proceso de actualizacion</p>
+    </div>
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top navardyl" id="mainNav">
         <div class="container logo_nav">
@@ -230,7 +233,7 @@
     </footer>
     <!-- Copyright Section-->
     <div class="copyright py-4 text-center text-white">
-        <div class="container"><small>Copyright 2021 © Dylan Seltzer | www.dylansel.tk </small></div>
+        <div class="container"><small>Copyright 2020-2021 © Dylan Seltzer | www.dylansel.tk <br> Pagina en proceso de actualizacion </small></div>
     </div>
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
     <div class="scroll-to-top d-lg-none position-fixed">
